--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "pretty-quick --staged"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
@@ -33,6 +34,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
+    "pretty-quick": "^3.1.3",
     "typescript": "^5.0.4"
   }
 }
