--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "autoprefixer": "10.4.14",
+    "ethers": "5",
     "framer-motion": "^10.12.9",
     "next": "13.3.1",
     "nprogress": "^0.2.0",
