--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "autoprefixer": "10.4.14",
+    "connectkit": "1.1.1",
+    "ethers": "5",
     "framer-motion": "^10.12.9",
     "next": "13.3.1",
     "nprogress": "^0.2.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "wagmi": "0.10.10"
   },
   "devDependencies": {
     "@types/memory-cache": "^0.2.2",
