--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@supabase/supabase-js": "^2.22.0",
     "@superfaceai/one-sdk": "^2.4.2",
     "autoprefixer": "10.4.14",
     "ethers": "5",
