--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.4.14",
     "connectkit": "1.1.1",
     "ethers": "5",
+    "ethers-multicall": "^0.2.3",
     "framer-motion": "^10.12.9",
     "next": "13.3.1",
     "nprogress": "^0.2.0",
