--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@superfaceai/one-sdk": "^2.4.2",
     "autoprefixer": "10.4.14",
     "connectkit": "1.1.1",
+    "dayjs": "^1.11.7",
     "ethers": "5",
     "ethers-multicall": "^0.2.3",
     "framer-motion": "^10.12.9",
