--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": "next/core-web-vitals",
-  "ignorePatterns": ["**/package.json"]
+  "ignorePatterns": ["**/package.json"],
+  "rules": {
+    "react/no-unescaped-entities": "off"
+  }
 }
