--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.12.9",
+    "js-cookie": "^3.0.5",
     "next": "13.3.1",
     "nprogress": "^0.2.0",
     "postcss": "8.4.23",
@@ -25,6 +26,7 @@
     "react-icons": "^4.8.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/memory-cache": "^0.2.2",
     "@types/node": "^20.1.1",
     "@types/nprogress": "^0.2.0",
