[Validate] Add new service

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@supabase/supabase-js": "^2.22.0",
-    "@superfaceai/one-sdk": "^2.4.2",
     "autoprefixer": "10.4.14",
     "connectkit": "1.1.1",
     "dayjs": "^1.11.7",
     "ethers": "5",
     "ethers-multicall": "^0.2.3",
     "framer-motion": "^10.12.9",
+    "ipdata": "^2.2.4",
     "next": "13.3.1",
     "nprogress": "^0.2.0",
     "postcss": "8.4.23",
