--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@supabase/supabase-js": "^2.22.0",
     "autoprefixer": "10.4.14",
+    "bignumber.js": "^9.1.1",
     "connectkit": "1.1.1",
     "dayjs": "^1.11.7",
     "ethers": "5",
