--- a/.env-example
+++ b/.env-example
@@ -14,3 +14,4 @@ NEXT_PUBLIC_VERCEL_URL=
 NEXT_PUBLIC_OPENSEA_URL=
 NEXT_PUBLIC_MASCHINE_CONTRACT_ADDRESS=
 NEXT_PUBLIC_WEB3_NETWORK=
+NEXT_PUBLIC_VERCEL_ENV=development
